<resources>
    <string name="app_name">TermTracker</string>
    <string name="Term_Name">Term: </string>
    <string name="Status">Status: </string>
    <string name="StatusHelpText">Enter Status</string>
    <string name="Course_Name">Course: </string>
    <string name="Instructor_Name">Instructor: </string>
    <string name="Start_Date">Start: </string>
    <string name="End_Date">End: </string>
    <string name="Assessment_Type">Type:</string>
    <string name="Assessment_Type_HelpText">Enter Type</string>
    <string name="Assessment_Screen">Assessment List</string>
    <string name="Assessment_ID">Assessment ID:</string>
    <string name="Assessment">Assessment</string>
    <string name="Assessment_Name">Assessment: </string>
    <string name="Notes">Notes: </string>
    <string name="NotesHelpText">Enter Notes</string>
    <string name="Instructor_Phone">Phone: </string>
    <string name="Instructor_HelpText_Phone">Enter Instructor Phone </string>
    <string name="Instructor_Email">Email: </string>
    <string name="Instructor_Help_Email">Enter Instructor Email </string>
    <string name="InstructorHelpText">Enter Instructor Info</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Term_Screen">Term List</string>
    <string name="Course_Screen">Course List</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="Term">Term</string>
    <string name="Course">Course</string>
    <string name="NameHelpText">Enter Name</string>
    <string name="DateHelpText">Enter Date MM/dd/yy</string>
    <string name="View">View</string>
    <string name="Term_Format">Format: Fall 2022</string>
    <string-array name="Status">
        <item>Plan to take</item>
        <item>In progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
</resources>