<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrotto"
    tools:context=".UI.CourseDetails">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseAssessmentList"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courseTermList"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCourseDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_library_add_24"
        android:contentDescription="@string/Add"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteCourseDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_restore_from_trash_24"
        android:contentDescription="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/addCourseDetailsBTN"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateCourseDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/Update"
        app:srcCompat="@drawable/baseline_refresh_24"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toRightOf="@+id/deleteCourseDetailsBTN"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/courseTermTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Term_Name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/courseTermList"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Course_Name"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/courseTermTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/courseStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Start_Date"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/courseTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/courseEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/End_Date"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/courseStartDate"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/courseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Status"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/courseEndDate"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Instructor_Name"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/courseStatus"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/instructorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Instructor_Phone"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/instructor"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/instructorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Instructor_Email"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/instructorPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/courseNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/babyBlue"
        android:text="@string/Notes"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/instructorEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/courseTermTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/NameHelpText"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseTermList"
        />

    <EditText
        android:id="@+id/courseTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/NameHelpText"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseTermTitle"
        />

    <EditText
        android:id="@+id/courseStartDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/DateHelpText"
        android:inputType="date"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseTitleInput"
        />

    <EditText
        android:id="@+id/courseEndDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/DateHelpText"
        android:inputType="date"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseStartDateInput"
        />

    <EditText
        android:id="@+id/courseStatusInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Status"
        android:inputType="text"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseEndDateInput"
        />

    <EditText
        android:id="@+id/instructorInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/NameHelpText"
        android:inputType="text"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseStatusInput"/>

    <EditText
        android:id="@+id/instructorPhoneInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/InstructorHelpText"
        android:inputType="phone"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorInput" />

    <EditText
        android:id="@+id/instructorEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/InstructorHelpText"
        android:inputType="textEmailAddress"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorPhoneInput"
        />

    <EditText
        android:id="@+id/courseNotesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/NotesHelpText"
        android:inputType="text"
        android:layout_marginStart="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorEmailInput"
        />

</androidx.constraintlayout.widget.ConstraintLayout>