<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrotto"
    tools:context=".UI.AssessmentDetails">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addAssessmentDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_library_add_24"
        android:contentDescription="@string/Add"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteAssessmentDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_restore_from_trash_24"
        android:contentDescription="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/addAssessmentDetailsBTN"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateAssessmentDetailsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/Update"
        app:srcCompat="@drawable/baseline_refresh_24"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toRightOf="@+id/deleteAssessmentDetailsBTN"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:id="@+id/assessment_detail_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentCourseTermName"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Term_Name"
                    />

                <EditText
                    android:id="@+id/assessmentCourseTermNameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/NameHelpText"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentCourseTitle"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Course_Name"
                    />

                <EditText
                    android:id="@+id/assessmentCourseTitleInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/NameHelpText"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentTitle"
                    android:layout_width="105dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Assessment_Name"
                    />

                <EditText
                    android:id="@+id/assessmentTitleInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/NameHelpText"
                    android:inputType="text"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentType"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Start_Date"
                    />

                <EditText
                    android:id="@+id/assessmentTypeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/DateHelpText"
                    android:inputType="date"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentStartDate"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Start_Date"
                    />

                <EditText
                    android:id="@+id/assessmentStartDateInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/DateHelpText"
                    android:inputType="date"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentEndDate"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/End_Date"
                    />

                <EditText
                    android:id="@+id/assessmentEndDateInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/DateHelpText"
                    android:inputType="date"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/assessmentStatus"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Status"
                    />

                <EditText
                    android:id="@+id/assessmentStatusInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/Status"
                    android:inputType="text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseNotes"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:textColor="@color/babyBlue"
                    android:textSize="14sp"
                    android:text="@string/Notes"
                    />

                <EditText
                    android:id="@+id/assessmentNotesInput"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/NotesHelpText"
                    android:inputType="text"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>