<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrotto"
    tools:context=".UI.MainActivity">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="261dp">

        <ImageView
            android:id="@+id/ReadingABook"
            android:layout_width="187dp"
            android:layout_height="184dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/mainLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_local_library_24" />

        <Button
            android:id="@+id/termScreen"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/navyBlue"
            android:text="@string/Term_Screen"
            android:textStyle="bold" />

        <Button
            android:id="@+id/courseScreen"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/navyBlue"
            android:text="@string/Course_Screen"
            android:textStyle="bold" />

        <Button
            android:id="@+id/assessmentScreen"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/navyBlue"
            android:text="@string/Assessment_Screen"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>